@@ -1,3 +1,9 @@
+2004-08-21  Tor Lillqvist  <tml@iki.fi>
+
+	* glib/gunicollate.c (g_utf8_collate_key): Guard against bogus
+	return value from strxfrm(). For instance Microsoft's strxfrm()
+	returns INT_MAX on errors. (#141124)
+
 2004-08-19  Tor Lillqvist  <tml@iki.fi>
 
 	* glib/gunicollate.c (g_utf8_collate, g_utf8_collate_key): Correct
@@ -120,7 +126,7 @@ Sun Aug  1 13:19:18 2004  Manish Singh  <yosh@gimp.org>
 	to run_roundtrip_tests().
 
 2004-08-01 Matthias Clasen  <mclasen@redhat.com>
-                                                                                
+
 	* Post-release version bump
 
         * === Released 2.5.1 ===
